﻿*# Попытка пофиксить статистику*