@@ -81,5 +81,12 @@
   "VOTEBAN_RATIO": [ "*Процент голосов \"За\" ниже 70% ({0}%)!*" ],
   "VOTEBAN_BANNED": [ "{0} *был забанен на 15 минут по праву большинства! 🌚\n\nЗа {1}<>{2} Против*" ],
   "VOTEBAN_ALREADY": [ "*В этой группе уже проходит голосование!*" ],
-  "VOTEBAN_IGNORED": ["*Обнаружена накрутка. Не засчитано: {0}*"]
+  "VOTEBAN_IGNORED": [ "*Обнаружена накрутка. Не засчитано: {0}*" ],
+
+  "PIDR_ONE": [ "*Запускаю зонд для сбора данных 🚀🛰*" ],
+  "PIDR_TWO": [ "*Уловил слабые пюльсары 〰️*" ],
+  "PIDR_THREE": [ "*Барабанная дробь... 🥁🥁*" ],
+  "PIDR_DONE": [ "*Наш звездный пидор на сегодня - *[{0}](tg://user?id={1}) 🥳🥳🥳" ],
+  "PIDR_EXIST": [ "*Пидр дня на сегодня определен - {0}👻😽*" ],
+  "PIDR_DAY": [ "[{0}](tg://user?id={1})*, был(а) пидором дня — *_{2}_* раз!*" ]
 }
