@@ -1,1 +1,6 @@
-﻿*# Попытка пофиксить статистику*
+﻿
+👑🦊Автор данного 400го обновления ее Лисейшество @FreyjaAnastasievna 🥳🥳
+
+# Доделана команда /pidr
+# Добавлена команда /pidrme
+# Добавлена команда /pidrstats
